--- a/privacy/index.html
+++ b/privacy/index.html
@@ -4,17 +4,10 @@
   <title>Privacy Policy</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.css">
   <style>
     body {
-      padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-    }
-
-    blockquote {
-      padding: 10px;
-      padding-left: 25px;
-      border-left: 4px solid #4794E6;
+      padding-top: 30px; /* 60px to make the container go all the way to the bottom of the topbar */
     }
 
     a {
@@ -25,10 +18,44 @@
 </head>
 <body>
   <div class="container">
-    <br>
-    <blockquote>
-      <font size="3">Customgram doesn't share any user data or device information with anyone. It uses Telegram API so in order to know more details about it please check <a href="https://telegram.org/privacy">Telegram Privacy Policy</a><br></font>
-    </blockquote>
+    <h1>Privacy Policy</h1>
+    <p>
+      <b>Customgram</b> uses Telegram API so in order to know more details about it please check <a href="https://telegram.org/privacy">Telegram Privacy Policy</a>.
+    </p>
+    <p>
+      This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.
+    </p>
+    <p>
+      If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy. This information is not yours Telegram Account information.
+    </p>
+    <p>
+      The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Customgram unless otherwise defined in this Privacy Policy.
+    </p>
+
+    <h3>Information Collection and Use</h3>
+    <p>
+      The app does use third party services that may collect information used to identify you.
+    </p>
+    <p>
+      The app may upload your your contacts information to Telegram servers in order to filter your contacts that have a Telegram account. This information will never be shared with anyone and you can opt out by denying access to that permission or disabling it in <i>Settings</i> -> <i>Privacy and Security</i> -> <i>Sync contacts</i>.
+    </p>
+    <p>
+      Link to privacy policy of third party service providers used by the app
+    </p>
+    <ul>
+      <li><a href="https://telegram.org/privacy" target="_blank">Telegram</a></li>
+      <li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a></li>
+    </ul>
+
+    <h3>Changes to This Privacy Policy</h3>
+    <p>
+      We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.
+    </p>
+
+    <h3>Contact Us</h3>
+    <p>
+      If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at <a href="mailto:contact@amanoteam.com">contact@amanoteam.com</a>.
+    </p>
   </div>
 </body>
 </html>
